--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ hr {
 h1 {
   margin: 0;
   border: 0;
-  font-size: 50px;
+  font-size: 4rem;
   font-family: 'Dancing Script', cursive;
   color: #66BFBF;
 }
@@ -44,8 +44,13 @@ h3 {
 h4 {
   margin: 0;
   border: 0;
+  font-size: 1rem;
   font-family: 'Montserrat', sans-serif;
   color: #66BFBF;
+}
+
+.description {
+  padding: 20px 0;
 }
 
 td {
